kubernetes/hotrod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotrod-svc
  namespace: hotrod
spec:
  selector:
    app: hotrod
  ports:
    - name: frontend
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: frontend
